--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<description>WildanVEP Backend API</description>
 	<properties>
 		<java.version>18</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
